# infragit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release.yml  update-pull-request.yml
infragit/: __main__.py
tests/: test_init.py
