[tool.poetry]
name = "infragit"
version = "0.1.0"
description = ""
authors = ["Naveen Anil <naveenms01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
